--- a/CSC102 9 9 24 first html.html
+++ b/CSC102 9 9 24 first html.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <p>
-        This is a paragraph - change this!
+       The Foundation
+        
         <br>
-        this is line 2
+       Josette Pulliam
     </p>
     <h1>
-        this is h1
+        <p>
+            
+        </p>
     </h1>
     <h6>
         this is h6
